--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,6 @@
             background-color: black;
         }
 
-        /* #demo{
-            background-color: white;
-        } */
         p {
             float:inline-end;
         }
@@ -93,16 +90,28 @@
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
       <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-      <!-- <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button> -->
+      <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+      <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
+      <button type="button" data-bs-target="#demo" data-bs-slide-to="4"></button>
+
     </div>
   
     <!-- The slideshow/carousel -->
     <div class="carousel-inner" id="test01">
       <div class="carousel-item active">
-        <img src="../img/1.png" alt="Los Angeles" class="d-block w-100">
+        <img src="../img/뷰건메인.png" alt="Los Angeles" class="d-block w-100">
       </div>
       <div class="carousel-item">
-        <img src="../img/2.png" alt="Chicago" class="d-block w-100">
+        <img src="../img/디어달리아.png" alt="Chicago" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="../img/멜릭서.png" alt="Chicago" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="../img/러쉬.png" alt="Chicago" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="../img/아떼.png" alt="Chicago" class="d-block w-100">
       </div>
       <!-- <div class="carousel-item">
         <img src="ny.jpg" alt="New York" class="d-block w-100">
@@ -154,7 +163,7 @@
           <div class="row g-0 border rounded overflow-hidden flex-md-row shadow-sm h-md-250 position-relative">
             <div class="col p-4 d-flex flex-column position-static">
               <strong class="d-inline-block mb-2 text-dark">Lush</strong>
-              <h3 class="mb-0">사쿠라 보디스프레이</h3>
+              <h3 class="mb-0">투 모어 하츠</h3>
               <div class="mb-1 text-muted">★★★★★</div><br>
               <p class="card-text mb-auto">시간이 지나 남는 잔향은 첫 향보다 훨씬 잔잔하고 부드러운 꽃향이 올라오고, 아카시아 꿀향같은 달달한 향이 은은하게 남습니다. 외출때 뿌려도 좋지만 잠들기전에 사용하면 마음이 평온해지고 포근해져요.</p>
             </div>
@@ -170,8 +179,35 @@
             <button type="button" class="btn btn-outline-success btn-lg px-4 gap-3">상품 보러가기</button>
         </div>
       </div>
-        
+    </div>
+  </div>
 
+
+  <div class="container">
+    <div class="px-4 py-5 my-2 clearfix">
+        <div class="row my-2">
+          <div class="col-lg-6 align-self-center"><br>
+          <div class="text-center">
+            <div class="row justify-content-start">
+              <img src="https://www.lush.co.kr/data/goods/20/02/06/1000001178/1000001178_main_093.jpg" class="img-thumbnail mx-auto" alt="">
+            </div>
+          </div>
+          
+        </div>
+
+        <div class="col-lg-6 align-self-center">
+          <div class="row g-0 border rounded overflow-hidden flex-md-row shadow-sm h-md-250 position-relative">
+            <div class="col-auto d-none d-lg-block">
+              <img src="https://lush.co.kr/data/plus_review/1000001178/a17aea7d895cc355" alt="" style="height: 300px;">
+            </div>
+          </div>
+          <div class="row g-0 border rounded overflow-hidden flex-md-row shadow-sm h-md-250 position-relative">
+            <div class="col-auto d-none d-lg-block">
+              <img src="https://lush.co.kr/data/plus_review/1000000874/f98a943da258b216" alt="" style="height: 300px;">
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   
