--- a/public/index.html
+++ b/public/index.html
@@ -99,19 +99,19 @@
     <!-- The slideshow/carousel -->
     <div class="carousel-inner" id="test01">
       <div class="carousel-item active">
-        <img src="../img/뷰건메인.png" alt="Los Angeles" class="d-block w-100">
+        <img src="../img/뷰건메인.png" alt="Los Angeles" class="d-block w-100">
       </div>
       <div class="carousel-item">
-        <img src="../img/디어달리아.png" alt="Chicago" class="d-block w-100">
+        <img src="../img/디어달리아.png" alt="Chicago" class="d-block w-100">
       </div>
       <div class="carousel-item">
-        <img src="../img/멜릭서.png" alt="Chicago" class="d-block w-100">
+        <img src="../img/멜릭서.png" alt="Chicago" class="d-block w-100">
       </div>
       <div class="carousel-item">
-        <img src="../img/러쉬.png" alt="Chicago" class="d-block w-100">
+        <img src="../img/러쉬.png" alt="Chicago" class="d-block w-100">
       </div>
       <div class="carousel-item">
-        <img src="../img/아떼.png" alt="Chicago" class="d-block w-100">
+        <img src="../img/아떼.png" alt="Chicago" class="d-block w-100">
       </div>
       <!-- <div class="carousel-item">
         <img src="ny.jpg" alt="New York" class="d-block w-100">
