--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         }
 
         body>header, footer{
-            background-color: black;
+            background-color: #093023;
         }
 
         p {
@@ -48,7 +48,7 @@
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
         
         <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="../img/logo01.png" alt="" id="logo">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="../img/logo02.PNG" alt="" id="logo">
         </a>
   
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
@@ -61,7 +61,7 @@
   
         <div class="col-md-3 text-end">
           <div class="dropdown">
-            <button class="btn btn-outline-success dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+            <button class="btn btn-outline-light dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
                     <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
                     <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
