회원가입성공

--- a/public/index.html
+++ b/public/index.html
@@ -71,8 +71,8 @@
                 </svg>
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-              <li><a class="dropdown-item" href="#">로그인</a></li>
-              <li><a class="dropdown-item" href="#">회원가입</a></li>
+              <li><a class="dropdown-item" href="./login.html">로그인</a></li>
+              <li><a class="dropdown-item" href="./Join.html">회원가입</a></li>
               <li><a class="dropdown-item" href="#">마이페이지</a></li>
               <li><a class="dropdown-item" href="#">로그아웃</a></li>
 
