--- a/public/Join.html
+++ b/public/Join.html
@@ -40,14 +40,14 @@
           <span class="text-dark h4">비건</span><span class="text-success h4">뷰티</span>
         </a>
       </div>
-      <form action="">
+      <form action="http://127.0.0.1:3000/join" method="post">
         <div class="form-group">
               <label for="exampleInputEmail1" class="form-label mt-4">아이디</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="id">
         </div>
                         <div class="form-group has-succes">
                               <label class="form-label mt-4" for="inputValid">비밀번호</label>
-                              <input type="password" class="form-control is-valid" id="inputValid">
+                              <input type="password" class="form-control is-valid" id="inputValid" name="pw">
                               <div class="valid-feedback"></div>
                         </div>
 
@@ -58,15 +58,24 @@
                         </div>
         <div class="form-group">
                 <label for="exampleInputEmail1" class="form-label mt-4">이름</label>
-              <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="name">
         </div>
         <div class="form-group">
           <label for="exampleInputEmail1" class="form-label mt-4">닉네임</label>
-        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name = "nick">
         </div>
         <div class="form-group">
           <label for="exampleInputEmail1" class="form-label mt-4">이메일</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="입력">
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="입력" name="email">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputEmail1" class="form-label mt-4">성별</label>
+          <input type="radio" name="gender" value="male">남자
+          <input type="radio" name="gender" va="female">여자
+        </div>
+        <div class="form-group">
+          <label for="exampleInputEmail1" class="form-label mt-4">전화번호</label>
+          <input type="tel" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="입력" name="tel">
         </div>
         <div class="d-grid gap-2">
           <button class="btn btn-success btn-lg" type="submit">가입하기</button>
