--- a/public/login_Fail.html
+++ b/public/login_Fail.html
@@ -9,7 +9,7 @@
 <body>
     <script>
         alert("아이디나 패스워드를 확인해주세요")
-        location.href = "";
+        location.href = "http://127.0.0.1:5500/public/login.html";
     </script>
 </body>
 </html>
