--- a/public/login.html
+++ b/public/login.html
@@ -24,24 +24,20 @@
 </head>
 <body class="text-center">
     <main class="form-signin">
-        <form>
+        <form action="http://127.0.0.1:3000/login">
           <img class="mb-4" src="/BeauGan_logo.png" alt="" width="72" height="57">
           <h1 class="h3 mb-3 fw-normal">로그인 해주세요</h1>
       
           <div class="form-floating">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+            <input type="text" class="form-control" id="floatingInput" name="id" placeholder="name@example.com">
             <label for="floatingInput">아이디</label>
           </div>
           <div class="form-floating">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+            <input type="password" class="form-control" id="floatingPassword" name="pw" placeholder="Password">
             <label for="floatingPassword">비밀번호</label>
           </div>
       
-          <div class="checkbox mb-3">
-            <label>
-              <input type="checkbox" value="remember-me"> 자동 로그인
-            </label>
-          </div>
+
           <button class="w-100 btn btn-lg btn-success" type="submit">로그인</button>
         </form>
       </main>
