--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <style>
-        #test01{
-            height: 600px;
-        }
-
         #logo{
             height: 45px;
         }
@@ -96,19 +92,19 @@
     <!-- The slideshow/carousel -->
     <div class="carousel-inner" id="test01">
       <div class="carousel-item active">
-        <img src="./img/뷰건메인.png" alt="" class="d-block w-100">
+        <img src="./img/001.jpg" alt="" class="d-block w-100">
       </div>
       <div class="carousel-item">
-        <img src="./img/디어달리아.png" alt="" class="d-block w-100">
+        <img src="./img/002.jpg" alt="" class="d-block w-100">
       </div>
       <div class="carousel-item">
-        <img src="./img/멜릭서.png" alt="" class="d-block w-100">
+        <img src="./img/003.jpg" alt="" class="d-block w-100">
       </div>
       <div class="carousel-item">
-        <img src="./img/러쉬.png" alt="" class="d-block w-100">
+        <img src="./img/004.jpg" alt="" class="d-block w-100">
       </div>
       <div class="carousel-item">
-        <img src="./img/아떼.png" alt="" class="d-block w-100">
+        <img src="./img/005.jpg" alt="" class="d-block w-100">
       </div>
     </div>
   
