--- a/public/mypage_main.html
+++ b/public/mypage_main.html
@@ -28,6 +28,7 @@
         }
 
 
+
     </style>
 
 </head>
@@ -67,7 +68,6 @@
     </div>
   </header>
 
-  <main>
     <div class="container-md py-3">
 
         <!-- <div class="row">
@@ -97,18 +97,20 @@
 
             <div><h1>안녕하세요, 닉네임 님</h1></div>
             <hr>
-            <div class="row my-2">
-              <img src="./img/mp111.png" alt="">
+            <div class="row my-3">
+              <div class="col"><a href=""><img src="./img/mp111.png" alt="" class="img-fluid"></a></div>
             </div>
-            <div class="row my-2 mp">
-              <img src="./img/mp222.png" alt="" >
+            <div class="row my-3">
+              <div class="col"><a href=""><img src="./img/mp222.png" alt="" class="img-fluid"></a></div>
             </div>
-            <div class="row my-2 mp">
-              <img src="./img/mp333.png" alt="">
+            <div class="row my-3">
+              <div class="col"><a href=""><img src="./img/mp333.png" alt="" class="img-fluid"></a></div>
+            </div>
+            <div class="row my-3">
+              <div class="col"><a href=""><img src="./img/whiteBG2.png" alt="" class="img-fluid"></a></div>
             </div>
 
-      </div>
-    </main>
+    </div>
 
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
         <p class="col-md-4 mb-0 text-muted">© 2021 Company, Inc</p>
@@ -124,7 +126,7 @@
           <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
           <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
         </ul>
-      </footer>
+    </footer>
 
 
   
