--- a/public/index.html
+++ b/public/index.html
@@ -48,11 +48,11 @@
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
         
         <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="../img/logo02.PNG" alt="" id="logo">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="./img/logo02.PNG" alt="" id="logo">
         </a>
   
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="#" class="nav-link px-2 link-light">Home</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <li><a href="http://127.0.0.1:5500/public/index.html" class="nav-link px-2 link-light">Home</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li><a href="#" class="nav-link px-2 link-light">About</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li><a href="#" class="nav-link px-2 link-light">Contents</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li><a href="#" class="nav-link px-2 link-light">Shop</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -70,8 +70,8 @@
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
               <li><a class="dropdown-item" href="./login.html">로그인</a></li>
               <li><a class="dropdown-item" href="./Join.html">회원가입</a></li>
-              <li><a class="dropdown-item" href="#">마이페이지</a></li>
-              <li><a class="dropdown-item" href="#">로그아웃</a></li>
+              <!-- <li><a class="dropdown-item" href="#">마이페이지</a></li> -->
+              <!-- <li><a class="dropdown-item" href="#">로그아웃</a></li> -->
 
             </ul>
             &nbsp;&nbsp;&nbsp;&nbsp;
