--- a/public/login.html
+++ b/public/login.html
@@ -24,7 +24,7 @@
 </head>
 <body class="text-center">
     <main class="form-signin">
-        <form action="http://127.0.0.1:3000/login">
+        <form action="http://127.0.0.1:3000/login" method="post">
           <img class="mb-4" src="/BeauGan_logo.png" alt="" width="72" height="57">
           <h1 class="h3 mb-3 fw-normal">로그인 해주세요</h1>
       
