--- a/public/recommend_Q1.html
+++ b/public/recommend_Q1.html
@@ -149,28 +149,25 @@ a, a:link {
  <div class="container">
      <div class="row">
        <div class="col">
-           <a href="#"><img src="./img/01.jpg" alt="" class="mx-2 my-3"></a>
+           <a href="./recommend_skin.html"><img src="./img/01.jpg" alt="" class="mx-2 my-3"></a>
            <a href="#"><img src="./img/02.jpg" alt="" class="mx-2 my-3"></a>
-            <a href="#"><img src="./img/03.jpg" alt="" class="mx-2 my-3"></a>
+            <a href="./recommend_makeup.html"><img src="./img/03.jpg" alt="" class="mx-2 my-3"></a>
        </div>
      </div>
      <div class="row">
          <div class="col">
-             <a href="#"><img src="./img/04.jpg" alt="" class="mx-2 my-3"></a>
-             <a href="#"><img src="./img/05.jpg" alt="" class="mx-2 my-3"></a>
+             <a href="./recommend_clean.html"><img src="./img/04.jpg" alt="" class="mx-2 my-3"></a>
+             <a href="./recommend_perfume.html"><img src="./img/05.jpg" alt="" class="mx-2 my-3"></a>
          </div>   
          </div>
          <div class="row">
              <div class="col">
+
                  <img src="./img/white.JPG" alt="" class="mx-2 my-5">
                  <img src="./img/white.JPG" alt="" class="mx-2 my-5">
                  <img src="./img/white.JPG" alt="" class="mx-2 my-5">
                  <img src="./img/white.JPG" alt="" class="mx-2 my-5">
                  
-               
-
-
-
              </div>   
              </div>
  </div>
