--- a/public/recommend_start.html
+++ b/public/recommend_start.html
@@ -142,7 +142,7 @@ body{
      < <div class="row">
          <div class="col">
              
-             <a href="#"><img src="./img/시작버튼.jpg" alt="" class="mx-5 my-3"></a>
+             <a href="./recommend_Q1.html"><img src="./img/시작버튼.jpg" alt="" class="mx-5 my-3"></a>
          </div>   
          </div> 
         <div class="row">
