--- a/public/mypage_wishList.html
+++ b/public/mypage_wishList.html
@@ -16,6 +16,13 @@
         body>header, footer{
             background-color: #093023;
         }
+        body {
+          background-color: rgb(238, 238, 238);
+        }
+
+        main {
+          background-color: white;
+        }
     </style>
 
 </head>
@@ -55,7 +62,8 @@
     </div>
   </header>
 
-
+<main class="container justify-content-center">
+  <br>
     <div class="bn-box con">
         <div class="img-box">
             <img src="./img/mp_wishList.png" alt="">
@@ -77,24 +85,25 @@
     </div>
 
     <div>
-        <img src="./img/whiteBG2.png" alt="">
+        <img src="./img/whiteBG2.png" alt="" class="img-fluid">
     </div>
+</main>
 
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
-        <p class="col-md-4 mb-0 text-muted">© 2021 Company, Inc</p>
-  
-        <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-          <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-        </a>
-  
-        <ul class="nav col-md-4 justify-content-end">
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
-        </ul>
-    </footer>
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
+    <p class="col-md-4 mb-0 text-muted">© 2021 Company, Inc</p>
+
+    <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+      <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+    </a>
+
+    <ul class="nav col-md-4 justify-content-end">
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+    </ul>
+</footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
