정보수정 이메일 지움

--- a/public/mypage_modify.html
+++ b/public/mypage_modify.html
@@ -95,23 +95,23 @@
                             <table class="">
                                 <tr>
                                     <td><label for="exampleFormControlInput1" class="form-label" id="idR">아이디</label></td>
-                                    <td colspan="2">접속자 아이디가 세션으로 들어오겠구먼</td>
+                                    <td>접속자 아이디가 세션으로 들어오겠구먼</td>
                                 </tr>
                                 <tr>
                                     <td><label for="exampleFormControlInput1" class="form-label">현재 비밀번호</label></td>
-                                    <td colspan="2"><input type="password" class="form-control" id="mod_pw"></td>
+                                    <td><input type="password" class="form-control" id="mod_pw"></td>
                                 </tr>
                                 <tr>
                                     <td><label for="exampleFormControlInput1" class="form-label">새 비밀번호</label></td>
-                                    <td colspan="2"><input type="password" class="form-control" id="mod_pw"></td>
+                                    <td><input type="password" class="form-control" id="mod_pw"></td>
                                 </tr>
                                 <tr>
                                     <td><label for="exampleFormControlInput1" class="form-label" id="idR">이름</label></td>
-                                    <td colspan="2"><input type="text" class="form-control"></td>
+                                    <td><input type="text" class="form-control"></td>
                                 </tr>
                                 <tr>
                                     <td><label for="exampleFormControlInput1" class="form-label" id="idR">닉네임</label></td>
-                                    <td colspan="2"><input type="text" class="form-control"></td>
+                                    <td><input type="text" class="form-control"></td>
                                 </tr>
                                 <tr>
                                     <td>
@@ -120,23 +120,10 @@
                                     <td>
                                         <input type="text" class="form-control"></td>
                                     </td>
-                                    <td>
-                                        <select id="inputState" class="form-select">
-                                            <option>naver.com</option>
-                                            <option>gmail.com</option>
-                                            <option>daum.net</option>
-                                            <option>nate.com</option>
-                                            <option>dassol.com</option>
-                                            <option>changhyun.com</option>
-                                            <option>junhyeong.com</option>
-                                            <option>doyoung.com</option>
-                                            <option>seungyun.com</option>
-                                          </select>
-                                    </td>
                                 </tr>
                                 <tr>
                                     <td><label for="exampleFormControlInput1" class="form-label" id="idR">휴대전화</label></td>
-                                    <td colspan="2"><input type="text" class="form-control"></td>
+                                    <td><input type="text" class="form-control"></td>
                                 </tr>
                                 <tr>
                                     <td><label for="exampleFormControlInput1" class="form-label">성별</label></td>
