--- a/public/mypage_wishList.html
+++ b/public/mypage_wishList.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wishlist</title>
     <link rel="stylesheet" href="./assets/css/wishList.css">
-    <link rel="stylesheet" href="assets/css/main.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <style>
@@ -71,16 +70,16 @@
     </div>
     <div class="list con">
         <ul class="row">
-            <% for(let i=0 ; i<rows.length ; i++){%>
+            <!-- <% for(let i=0 ; i<rows.length ; i++){%>
                 <li class="cell">
                   <div class="item">
-                   <a href="<%=rows[i].purchase_link%>"><div class="img-box"><img src="<%=rows[i].img_link%>" alt=""></div></a> 
+                   <a href="<%=rows[i].purchase_link%>"><div class="img-box"><img src="<%=rows[i].img_link%> class="img-fluid"" alt=""></div></a> 
                    <a href="<%=rows[i].purchase_link%>"><div class="product-name"><%=rows[i].item_name%></div></a>
                     <div class="product-price"><%=rows[i].strike_price%></div>
                     <span><button type="button" class="btn btn-success" id="like">하트</button></span>
                   </div>
                 </li>
-            <%}%> 
+            <%}%>  -->
         </ul>
     </div>
 
@@ -90,7 +89,7 @@
 </main>
 
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
-    <p class="col-md-4 mb-0 text-muted">© 2021 Company, Inc</p>
+    <p class="col-md-4 mb-0 text-muted">© 2022 Codingnator, Inc</p>
 
     <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
       <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
@@ -98,10 +97,10 @@
 
     <ul class="nav col-md-4 justify-content-end">
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contents</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Shop</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Recommend</a></li>
     </ul>
 </footer>
 
