make업 추천성공

--- a/public/recommend_makeup.html
+++ b/public/recommend_makeup.html
@@ -132,14 +132,14 @@ body{
  <div class="container">
      <div class="row">
        <div class="col">
-           <a href="#"><img src="./img/55.jpg" alt="" class="mx-5 my-3"></a>
-           <a href="#"><img src="./img/66.jpg" alt="" class="mx-5 my-3"></a>
+           <a href="http://127.0.0.1:3000/random_makeup_base"><img src="./img/55.jpg" alt="" class="mx-5 my-3"></a>
+           <a href="http://127.0.0.1:3000/random_makeup_lips"><img src="./img/66.jpg" alt="" class="mx-5 my-3"></a>
        </div>
      </div>
      <div class="row">
          <div class="col">
-             <a href="#"><img src="./img/77.jpg" alt="" class="mx-5 my-3"></a>
-             <a href="#"><img src="./img/88.jpg" alt="" class="mx-5 my-3"></a>
+             <a href="http://127.0.0.1:3000/random_makeup_eye"><img src="./img/77.jpg" alt="" class="mx-5 my-3"></a>
+             <a href="http://127.0.0.1:3000/random_makeup_blush"><img src="./img/88.jpg" alt="" class="mx-5 my-3"></a>
          </div>   
          </div>
          <!-- <div class="row">
