클렌징 추천

--- a/public/recommend_clean.html
+++ b/public/recommend_clean.html
@@ -134,9 +134,9 @@ body{
  <div class="container">
      <div class="row">
        <div class="col">
-           <a href="#"><img src="./img/99.jpg" alt="" class="mx-5 my-3"></a>
-           <a href="#"><img src="./img/1010.jpg" alt="" class="mx-5 my-3"></a>
-           <a href="#"><img src="./img/1111.jpg" alt="" class="mx-5 my-3"></a>
+           <a href="http://127.0.0.1:3000/random_cleansing_face"><img src="./img/99.jpg" alt="" class="mx-5 my-3"></a>
+           <a href="http://127.0.0.1:3000/random_cleansing_hair"><img src="./img/1010.jpg" alt="" class="mx-5 my-3"></a>
+           <a href="http://127.0.0.1:3000/random_cleansing_body"><img src="./img/1111.jpg" alt="" class="mx-5 my-3"></a>
        </div>
      </div>
      <!-- <div class="row">
