--- a/public/recommend_perfume.html
+++ b/public/recommend_perfume.html
@@ -134,8 +134,8 @@ body{
  <div class="container">
      <div class="row">
        <div class="col">
-           <a href="#"><img src="./img/1212.jpg" alt="" class="mx-5 my-3"></a>
-           <a href="#"><img src="./img/1313.jpg" alt="" class="mx-5 my-3"></a>
+           <a href="http://127.0.0.1:3000/random_body_lotion"><img src="./img/1212.jpg" alt="" class="mx-5 my-3"></a>
+           <a href="http://127.0.0.1:3000/random_body_perfume"><img src="./img/1313.jpg" alt="" class="mx-5 my-3"></a>
        </div>
      </div>
      <!-- <div class="row">
