--- a/public/recommend_skin.html
+++ b/public/recommend_skin.html
@@ -135,14 +135,14 @@ body{
  <div class="container">
      <div class="row">
        <div class="col">
-           <a href="#"><img src="./img/11.jpg" alt="" class="mx-5 my-3"></a>
-           <a href="#"><img src="./img/22.jpg" alt="" class="mx-5 my-3"></a>
+           <a href="http://127.0.0.1:3000/random_skincare_cream"><img src="./img/11.jpg" alt="" class="mx-5 my-3"></a>
+           <a href="http://127.0.0.1:3000/random_skincare_serum"><img src="./img/22.jpg" alt="" class="mx-5 my-3"></a>
        </div>
      </div>
      <div class="row">
          <div class="col">
-             <a href="#"><img src="./img/33.jpg" alt="" class="mx-5 my-3"></a>
-             <a href="#"><img src="./img/44.jpg" alt="" class="mx-5 my-3"></a>
+             <a href="http://127.0.0.1:3000/random_skincare_cream"><img src="./img/33.jpg" alt="" class="mx-5 my-3"></a>
+             <a href="http://127.0.0.1:3000/random_skincare_lipcare"><img src="./img/44.jpg" alt="" class="mx-5 my-3"></a>
          </div>   
          </div>
          <!-- <div class="row">
