--- a/public/login_Fail.html
+++ b/public/login_Fail.html
@@ -4,12 +4,151 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
+          rel="stylesheet" 
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
+          crossorigin="anonymous">
+    <style>
+        .form-signin{
+            margin: auto;
+        }
+        body{
+        align-items: center;
+        background-color: rgb(238, 238, 238);
+        }
+
+        #logo{
+            height: 45px;
+        }
+
+
+        div.secondContainer {
+            margin: 0 auto;
+        }
+
+        table{
+            width: 100%;
+            border-collapse: separate;
+            border-spacing: 0 10px;
+        }
+
+        button{
+            border: none;
+        }
+
+        body>header, footer{
+            background-color: #093023;
+        }
+
+        main {
+          background-color: white;
+        }
+
+    </style>
 </head>
-<body>
-    <script>
-        alert("아이디나 패스워드를 확인해주세요")
-        location.href = "http://127.0.0.1:5500/public/login.html";
-    </script>
+<body class="text-center">
+
+  <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
+    <!-- 로고 마진 mx로 줌 -->
+    <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none mx-3">
+    <img src="./img/logo02.PNG" alt="" id="logo">
+    </a>
+    <!-- nbsp텍스트 영역으로 들여옴, col-md 바꿈 -->
+    <ul class="nav col-12 col-md-5 mb-2 justify-content-center mb-md-0">
+      <li><a href="#" class="nav-link px-2 link-light">Home</a></li>
+      <li><a href="#" class="nav-link px-2 link-light">About</a></li>
+      <li><a href="#" class="nav-link px-2 link-light">Contents</a></li>
+      <li><a href="#" class="nav-link px-2 link-light">Shop</a></li>
+      <li><a href="#" class="nav-link px-2 link-light">Recommend</a></li>
+    </ul>
+
+    <div class="col-md-3 col-sm-2 text-end">
+      <div class="dropdown">
+        <button class="btn btn-outline-light dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+          </svg>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+          <li><a class="dropdown-item" href="#">로그인</a></li>
+          <li><a class="dropdown-item" href="#">회원가입</a></li>
+          <li><a class="dropdown-item" href="#">마이페이지</a></li>
+          <li><a class="dropdown-item" href="#">로그아웃</a></li>
+      </ul>
+      &nbsp;&nbsp;&nbsp;&nbsp;
+      </div>
+    </div>
+  </header>
+
+
+    <main class="form-signin container my-5 justify-content-center">
+      <img src="./img/whiteBG3.png" alt="" class="img-fluid">
+      <img src="./img/whiteBG3.png" alt="" class="img-fluid">
+      <img src="./img/whiteBG3.png" alt="" class="img-fluid">
+
+      <div class="col-6" style="float: none; margin: 0 auto;">
+        <img src="./img/logo01.png" alt="" class="img-fluid">
+      </div>
+      <div class="row text-center">
+        <h1 class="mt-3 mb-5">로그인 해주세요</h1>
+    </div>
+      <div class="container col-lg-6 col-md-10 ">
+        <form action="http://127.0.0.1:3000/login" method="post">
+          <div class="form-floating">
+            <input type="text" class="form-control" id="floatingInput" name="id" placeholder="name@example.com">
+            <label for="floatingInput">아이디</label>
+          </div>
+          <div class="form-floating">
+            <input type="password" class="form-control" id="floatingPassword" name="pw" placeholder="Password">
+            <label for="floatingPassword">비밀번호</label>
+          </div>
+          <div>
+              <br>
+              <h5 style="color:red">아이디나 비밀번호를 확인해주세요.</h5>
+          </div>
+          <div>
+            <hr>
+            <button class="w-100 btn btn-lg btn-success" type="submit">로그인</button>
+          </div>
+        </form>
+      </div>
+      <img src="./img/whiteBG3.png" alt="" class="img-fluid">
+      <img src="./img/whiteBG3.png" alt="" class="img-fluid">
+      <img src="./img/whiteBG3.png" alt="" class="img-fluid">
+      <img src="./img/whiteBG3.png" alt="" class="img-fluid">
+      <img src="./img/whiteBG3.png" alt="" class="img-fluid">
+    </main>
+
+      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
+        <p class="col-md-4 mb-0 text-muted">© 2022 Company, Inc</p>
+    
+        <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+            <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+        </a>
+    
+        <ul class="nav col-md-4 justify-content-end">
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+        </ul>
+    </footer>
+
+
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
+              integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
+              crossorigin="anonymous">
+      </script>
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" 
+              integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" 
+              crossorigin="anonymous">
+      </script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" 
+              integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" 
+              crossorigin="anonymous">
+      </script>
 </body>
 </html>
