--- a/public/recommend_start.html
+++ b/public/recommend_start.html
@@ -100,8 +100,8 @@ body{
           <li><a href="#" class="nav-link px-2 link-light" id="help">Home</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li><a href="#" class="nav-link px-2 link-light" id="help2">About</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li><a href="#" class="nav-link px-2 link-light" id="help3">Contents</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <li><a href="#" class="nav-link px-2 link-light" id="help4">Shop</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <li><a href="#" class="nav-link px-2 link-light" id="help5">Recommend</a></li>
+          <li><a href="http://127.0.0.1:3000/show_item" class="nav-link px-2 link-light" id="help4">Shop</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <li><a href="http://127.0.0.1:3000/recommend_start.html" class="nav-link px-2 link-light" id="help5">Recommend</a></li>
         </ul>
   
         <div class="col-md-3 text-end">
