--- a/public/login.html
+++ b/public/login.html
@@ -56,11 +56,11 @@
     </a>
     <!-- nbsp텍스트 영역으로 들여옴, col-md 바꿈 -->
     <ul class="nav col-12 col-md-5 mb-2 justify-content-center mb-md-0">
-      <li><a href="#" class="nav-link px-2 link-light">Home</a></li>
+      <li><a href="http://127.0.0.1:3000/main" class="nav-link px-2 link-light">Home</a></li>
       <li><a href="#" class="nav-link px-2 link-light">About</a></li>
       <li><a href="#" class="nav-link px-2 link-light">Contents</a></li>
       <li><a href="#" class="nav-link px-2 link-light">Shop</a></li>
-      <li><a href="#" class="nav-link px-2 link-light">Recommend</a></li>
+      <li><a href="http://127.0.0.1:5501/public/recommend_start.html" class="nav-link px-2 link-light">Recommend</a></li>
     </ul>
 
     <div class="col-md-3 col-sm-2 text-end">
