--- a/public/Join2.html
+++ b/public/Join2.html
@@ -95,7 +95,7 @@
         <div class="container col-lg-6 col-md-10">
             <div class="row g-3 justify-content-center">
                 <div class="mb-3">
-                    <form class="needs-validation justify-content-center" novalidate="">
+                    <form class="needs-validation justify-content-center" novalidate="" action="http://127.0.0.1:3000/join" method="post">
                         <table class="">
                             <tr>
                                 <td><label for="exampleFormControlInput1" class="form-label" id="idR">아이디</label></td>
@@ -103,7 +103,7 @@
                             </tr>
                             <tr>
                                 <td><label for="exampleFormControlInput1" class="form-label">비밀번호</label></td>
-                                <td><input type="password" class="form-control" id="pw"></td>
+                                <td><input type="password" class="form-control" name="pw"></td>
                             </tr>
                             <tr>
                                 <td><label for="exampleFormControlInput1" class="form-label" id="idR">이름</label></td>
