죽겄다죽겄어

--- a/public/information_vegan.html
+++ b/public/information_vegan.html
@@ -88,24 +88,47 @@
     </div>
     <img src="./img/whiteBG3.png" alt="" class="img-fluid">
 
-    <div class="container col-lg-10 col-md-12">
+    <div class="container col-lg-8 col-md-10 col-sm-12">
         <div class="" style="float: none; margin: 0 auto;">
         <p class="fs-1">1. 비건의 정의</p>
         </div>
         <div>
-            <p class="fs-4">
+            <p class="fs-5">
                 &nbsp;&nbsp;어디선가 들어보긴 한 듯한, 그렇지만 여전히 낯선 ‘비건’이라는 단어. 사실 비건은 우리가 정말 익숙한 ‘채식주의자’의 한 종류 입니다. 이처럼 채식주의자는 무엇을 먹냐, 먹지 않느냐에 따라 다양한 종류가 있다는 사실, 알고 계셨나요?
             </p>
-            <div class="row justify-content-center my-4">
-                <img src="./img/베지터리안_분류.png" alt="" class="col-9 img-fluid">
+            <div class="row justify-content-center">
+                <img src="./img/채식주의 표.jpeg" alt="" class="img-fluid mb-3">
             </div>
-            <p class="fs-4">
+            <p class="fs-5">
                 &nbsp;위 표에서 볼 수 있듯이, 육류만을 먹지 않는 ‘폴로 베지터리언’부터 오로지 과일과 곡식만을 섭취하는 ‘프루테리언’까지 채식주의의 종류는 여러가지로 나뉩니다. 그 중 비건은 동물에게서 오는 모든 식재료를 거부하는 가장 대표적인 채식주의의 한 종류로, 최근 가장 이슈화 되는 분류이기도 합니다.
             </p>
         </div>
+        <br><br><br>
         <div class="" style="float: none; margin: 0 auto;">
             <p class="fs-1">2. 비건과 환경</p>
         </div>
+        <p class="fs-5">
+          &nbsp;&nbsp;비건이 관심을 받는 이유는 건강과 윤리적 측면도 있겠지만, 최근에는 환경적 측면에서 특히 주목을 받고 있습니다. 미 <국립과학원 회보>(PNAS)에 따르면, 지구 전체에서 배출되는 온실가스의 1/4이 식량 생산에서 나오고, 그 중 80%가 축산과 관련되어 있다고 합니다. 따라서, 채식 비중을 높이면 온실가스 배출량을 감소시키고 수십억 달러의 기후 재난비용을 절약할 수 있을 것이라고 보고된 바 있습니다.
+        </p>
+        <div class="row justify-content-center">
+          <img src="./img/비건환경영향.jpg" alt="" class="img-fluid mb-3">
+        </div>
+        <p class="fs-5">
+          &nbsp;이처럼 비건이 갖는 환경을 비롯한 다양한 이점들이 알려지며, 세계 채식 시장은 점차 증가하여 2030년까지 116조원 규모가 될 것으로 전망하고 있습니다. 또한, 건강과 환경을 위해 동물성 재료를 거부하는 비건의 철학은 식료품을 넘어 다양한 제품으로 확장되는 현상이 나타나고 있습니다.
+          그리고 그 대표적 사례가 ‘비건 화장품’입니다.
+          
+        </p>
+        <div>
+          <p class="fs-4">
+              &nbsp;&nbsp;
+          </p>
+          <div class="row justify-content-center my-4">
+              <img src="" alt="" class="col-9 img-fluid">
+          </div>
+          <p class="fs-4">
+              &nbsp;
+          </p>
+      </div>
         <div class="" style="float: none; margin: 0 auto;">
             <p class="fs-1">3. 비건뷰티</p>
         </div>
