--- a/public/mypage_out_done.html
+++ b/public/mypage_out_done.html
@@ -55,8 +55,6 @@
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
           <li><a class="dropdown-item" href="#">로그인</a></li>
           <li><a class="dropdown-item" href="#">회원가입</a></li>
-          <li><a class="dropdown-item" href="#">마이페이지</a></li>
-          <li><a class="dropdown-item" href="#">로그아웃</a></li>
       </ul>
       &nbsp;&nbsp;&nbsp;&nbsp;
       </div>
@@ -76,7 +74,7 @@
       <p class="lead mb-4 fs-2">그동안 감사했습니다. <br> 환경과 건강을 위해 <span> 언제든 다시 방문해주세요.</span></p>
       <br>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <button type="button" class="btn btn-primary btn-lg px-4 gap-3" style="background-color: #005b3a;">메인페이지로 돌아가기</button>
+        <a href="http://127.0.0.1:3000/main"><button type="button" class="btn btn-primary btn-lg px-4 gap-3" style="background-color: #005b3a;">메인페이지로 돌아가기</button></a>
       </div>
     </div>
   </div>
