--- a/public/mypage_out_done.html
+++ b/public/mypage_out_done.html
@@ -74,7 +74,7 @@
       <p class="lead mb-4 fs-2">그동안 감사했습니다. <br> 환경과 건강을 위해 <span> 언제든 다시 방문해주세요.</span></p>
       <br>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <a href="http://127.0.0.1:3000/main"><button type="button" class="btn btn-primary btn-lg px-4 gap-3" style="background-color: #005b3a;">메인페이지로 돌아가기</button></a>
+        <a href="http://127.0.0.1:3000/main"><button type="button" class="btn btn-success btn-lg px-4 gap-3" style="background-color: #005b3a;">메인페이지로 돌아가기</button></a>
       </div>
     </div>
   </div>
