--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
           <li><a href="#" class="nav-link px-2 link-light">About</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li><a href="#" class="nav-link px-2 link-light">Contents</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li><a href="#" class="nav-link px-2 link-light">Shop</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <li><a href="#" class="nav-link px-2 link-light">Recommend</a></li>
+          <li><a href="#" class="nav-link px-2 link-light">Recommend휴,,</a></li>
         </ul>
   
         <div class="col-md-3 text-end">
