--- a/public/recommend_result.html
+++ b/public/recommend_result.html
@@ -102,7 +102,7 @@ body{
 <body>
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
         
-        <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+        <a href="http://127.0.0.1:3000/main" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="./img/logo02.PNG" alt="" id="logo">
         </a>
   
