--- a/public/information_vegan.html
+++ b/public/information_vegan.html
@@ -12,6 +12,13 @@
 
     <style>
 
+@font-face {
+  font-family: 'Recipekorea';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/Recipekorea.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+        }
+
         #logo{
             height: 45px;
         }
@@ -46,7 +53,9 @@
           font-family: 'Josefin Sans', sans-serif;
         }
 
-
+.fs-1{
+  font-family: 'Recipekorea';
+}
 
     </style>
 </head>
