--- a/public/information_post.html
+++ b/public/information_post.html
@@ -94,11 +94,11 @@ main{
         </a>
   
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="#" class="nav-link px-2 link-light" id="help">Home</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <li><a href="#" class="nav-link px-2 link-light" id="help2">About</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <li><a href="#" class="nav-link px-2 link-light" id="help3">Contents</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <li><a href="#" class="nav-link px-2 link-light" id="help4">Shop</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <li><a href="#" class="nav-link px-2 link-light" id="help5">Recommend</a></li>
+          <li><a href="http://127.0.0.1:3000/main" class="nav-link px-2 link-light" id="help">Home</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <li><a href="./information_vegan.html" class="nav-link px-2 link-light" id="help2">About</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <li><a href="./information_news.html" class="nav-link px-2 link-light" id="help3">Contents</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <li><a href="http://127.0.0.1:3000/show_item" class="nav-link px-2 link-light">Shop</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <li><a href="http://127.0.0.1:3000/recommend_start.html" class="nav-link px-2 link-light">Recommend</a></li>
         </ul>
   
         <div class="col-md-3 text-end">
@@ -124,9 +124,9 @@ main{
 
     <main>
       
-      <p class="title"><a href="#" style="color: black; text-decoration: none;">news</a> | 
-        <a href="#" style="color: black;">post</a></p>
->
+      <p class="title"><a href="http://127.0.0.1:3000/information_news.html" style="color: black; text-decoration: none;">news</a> | 
+        <a href="http://127.0.0.1:3000/information_post.html" style="color: black;">post</a></p>
+
       <section class="py-5 text-center container">
         <div class="row py-lg-5">
           <div class="col-lg-6 col-md-8 mx-auto my-4">
