--- a/public/recommend_start.html
+++ b/public/recommend_start.html
@@ -14,7 +14,7 @@
       height: 45px;
     }
 
-    a.dropdown-item {
+    a.nav-item {
       text-align: end;
     }
 
@@ -144,10 +144,10 @@
           </svg>
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-          <li><a class="dropdown-item" href="./login.html" id="help6">로그인</a></li>
-          <li><a class="dropdown-item" href="./Join.html" id="help7">회원가입</a></li>
-          <li><a class="dropdown-item" href="#" id="help8">마이페이지</a></li>
-          <li><a class="dropdown-item" href="#" id="help9">로그아웃</a></li>
+          <li><a class="nav-item" href="./login.html" id="help6">로그인</a></li>
+          <li><a class="nav-item" href="./Join.html" id="help7">회원가입</a></li>
+          <li><a class="nav-item" href="#" id="help8">마이페이지</a></li>
+          <li><a class="nav-item" href="#" id="help9">로그아웃</a></li>
 
         </ul>
         &nbsp;&nbsp;&nbsp;&nbsp;
@@ -199,11 +199,11 @@
     </a>
 
     <ul class="nav col-md-4 justify-content-end">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted" id="help10">Home</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted" id="help11">Features</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted" id="help12">Pricing</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted" id="help13">FAQs</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted" id="help14">About</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted" id="help10">김다솔</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted" id="help11">김창현</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted" id="help12">박준형</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted" id="help13">유도영</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted" id="help14">이승윤</a></li>
     </ul>
   </footer>
 
