--- a/public/recommend_start.html
+++ b/public/recommend_start.html
@@ -172,7 +172,7 @@
       
       <div class="row">
         <div class="col">
-          <img src="./img/시작버튼.jpg" alt="" class="col-md-5 col-sm-8">
+          <a href="./recommend_Q1.html"><img src="./img/시작버튼.jpg" alt="" class="col-md-5 col-sm-8"></a>
         </div>
       </div>
       
