--- a/public/information_news.html
+++ b/public/information_news.html
@@ -67,10 +67,8 @@ body{
 }
 
 .title{
-    width: 100px; 
     margin: 0 auto;
-    text-align: left; 
-    width: 100px; 
+    text-align: center; 
     margin: 0 auto;
 
 }
@@ -123,8 +121,10 @@ main{
 
     <main>
       
-      <p class="title"><a href="http://127.0.0.1:3000/information_news.html" style="color: black; text-decoration: none;">news</a> | 
-        <a href="http://127.0.0.1:3000/information_post.html" style="color: black;">post</a></p>
+      <p class="title fs-3">
+        <a href="http://127.0.0.1:3000/information_news.html" class="btn btn-success" style="width: 200px;">News</a>
+        <a href="http://127.0.0.1:3000/information_post.html" class="btn btn-outline-success" style="width: 200px;">Post</a>
+      </p>
 
       <section class="py-5 text-center container">
         <div class="row py-lg-5">
