이모지 최고

--- a/public/recommend_start.html
+++ b/public/recommend_start.html
@@ -186,7 +186,7 @@
 
 
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
-    <p class="col-xl-6 col-lg-12 mb-0 text-muted"> <img src="./img/코딩네이터로고.PNG" alt="" height="45" class="mx-3">© 2022 SmartCampus AIClass Codingnator, Inc</p>
+    <p class="col-xl-6 col-lg-12 mb-0 text-muted"> <img src="./img/코딩네이터로고.PNG" alt="" height="45" class="mx-3">© 2022 SmartCampus AIClass Codingnator, Inc</p>
 
      
 
