로그인수정

--- a/public/login_Fail.html
+++ b/public/login_Fail.html
@@ -101,12 +101,11 @@
             <input type="password" class="form-control" id="floatingPassword" name="pw" placeholder="Password">
             <label for="floatingPassword">비밀번호</label>
           </div>
-          <div>
-              <br>
-              <h5 style="color:red">아이디나 비밀번호를 확인해주세요.</h5>
+          <div style="text-align: left;" class="mt-2">
+              <h6 style="color:red">아이디나 비밀번호를 확인해주세요.</h6>
           </div>
+          <br>
           <div>
-            <hr>
             <button class="w-100 btn btn-lg btn-success" type="submit">로그인</button>
           </div>
         </form>
