--- a/public/recommend_Q1.html
+++ b/public/recommend_Q1.html
@@ -149,6 +149,13 @@
     .row {
       text-align: center;
     }
+    main {
+      background-color: white;
+    }
+
+    body {
+      background-color: rgb(238, 238, 238);
+    }
   </style>
 
 
@@ -222,6 +229,7 @@
       </div>
     </div>
   </header>
+  <main class="container my-5 justify-content-center">
 
   <br><br>
   <p class="title" align="center">재미로보는 비건제품 추천</p>
@@ -279,7 +287,7 @@
       </div>
     </div>
   </div>
-
+</main>
 
 
 
