--- a/public/information_vegan.html
+++ b/public/information_vegan.html
@@ -56,6 +56,29 @@
 .fs-1{
   font-family: 'Recipekorea';
 }
+@media (max-width: 890px) {
+          ul.nav.col-12 {
+          display: none;
+          }
+
+          div.col-md-3.text-end {
+            flex-grow: 1;
+          }
+        }
+
+        @media (max-width: 768px) {
+          ul.nav.col-12 {
+            display: none;
+          }
+          div.col-md-3.text-end {
+            flex-grow: 1;
+          }
+          button#dropdownMenuButton1.dropdown-toggle::after{
+            display: none;
+          }
+          
+        }
+
 
     </style>
 </head>
@@ -96,7 +119,7 @@
 
   <main class="container my-5 justify-content-center">
 
-    <img src="./img/비건설명메인.png" alt="" class="img-fluid mt-3">
+    <img src="./img/정보배경.jpg" alt="" class="img-fluid mt-3">
     <img src="./img/whiteBG3.png" alt="" class="img-fluid">
 
     <div class="container col-lg-8 col-md-10 col-sm-12">
