--- a/public/recommend_clean.html
+++ b/public/recommend_clean.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <style>
+
         #logo{
             height: 45px;
         }
@@ -193,7 +194,7 @@ body{
         </div>
     </header>
 
-    <main class="container my-5 justify-content-center">
+    <main class="container my-5 justify-content-centerr d-flex flex-column min-vh-100">
     <br><br><p class="title" align = "center">재미로보는 비건제품 추천</p></div>
     <br><br>
     
@@ -224,7 +225,7 @@ body{
 </main>
 
 
-<footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 py-3 mt-auto">
   <p class="col-xl-6 col-lg-12 mb-0 text-muted"> <img src="./img/코딩네이터로고.PNG" alt="" height="45" class="mx-3">© 2022 SmartCampus AIClass Codingnator, Inc</p>
 
    
