--- a/public/recommend_makeup.html
+++ b/public/recommend_makeup.html
@@ -68,7 +68,7 @@ a, a:link {
 #help6,#help7,#help8,#help9{
   color: black;
   font-family: Helvetica Nene;
-  text-align: end;
+  text-align: end;+
 }
 
 @media (max-width: 1068px) {
@@ -191,7 +191,7 @@ body{
           </div>
         </div>
     </header>
-  <main class="container my-5 justify-content-center">
+  <main class="container my-5 justify-content-center d-flex flex-column min-vh-100">
     <br><br><p class="title" align = "center">재미로보는 비건제품 추천</p></div>
     <br><br>
     
@@ -221,7 +221,7 @@ body{
 </main>
 
 
-<footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 mt-auto">
   <p class="col-xl-6 col-lg-12 mb-0 text-muted"> <img src="./img/코딩네이터로고.PNG" alt="" height="45" class="mx-3">© 2022 SmartCampus AIClass Codingnator, Inc</p>
 
    
