--- a/public/recommend_result.html
+++ b/public/recommend_result.html
@@ -210,7 +210,7 @@ body{
         </div>
     </header>
 
-    <main class="container my-5 justify-content-center">
+    <main class="container my-5 justify-content-center d-flex flex-column min-vh-100">
 
     <br><br>
     
@@ -244,7 +244,7 @@ body{
 </main>
 
 
-<footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 mt-auto">
   <p class="col-xl-6 col-lg-12 mb-0 text-muted"> <img src="./img/코딩네이터로고.PNG" alt="" height="45" class="mx-3">© 2022 SmartCampus AIClass Codingnator, Inc</p>
 
    
