--- a/public/recommend_start.html
+++ b/public/recommend_start.html
@@ -229,7 +229,7 @@
     </div>
   </header>
 
-  <main class="container my-5 justify-content-center">
+  <main class="container my-5 justify-content-center d-flex flex-column min-vh-100">
     <br><br>
     <p class="title" align="center">재미로보는 비건제품 추천</p>
     </div>
@@ -259,7 +259,7 @@
   </main>
 
 
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 mt-auto">
     <p class="col-xl-6 col-lg-12 mb-0 text-muted"> <img src="./img/코딩네이터로고.PNG" alt="" height="45" class="mx-3">© 2022 SmartCampus AIClass Codingnator, Inc</p>
 
      
