--- a/public/recommend_perfume.html
+++ b/public/recommend_perfume.html
@@ -218,13 +218,13 @@
               d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
           </svg>
         </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+        <!-- <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
           <li><a class="dropdown-item" href="./login.html" id="help6">로그인</a></li>
           <li><a class="dropdown-item" href="./Join.html" id="help7">회원가입</a></li>
           <li><a class="dropdown-item" href="#" id="help8">마이페이지</a></li>
           <li><a class="dropdown-item" href="#" id="help9">로그아웃</a></li>
 
-        </ul>
+        </ul> -->
         &nbsp;&nbsp;&nbsp;&nbsp;
       </div>
     </div>
