추천 햄버거 수정

--- a/public/recommend_makeup.html
+++ b/public/recommend_makeup.html
@@ -65,7 +65,7 @@ a, a:link {
   color: white;
   font-family: Helvetica Nene;
 }
-#help6,#help7,#help8,#help9{
+#help6,#help7,#help8,#help9,#menu_li{
   color: black;
   font-family: Helvetica Nene;
   text-align: end;+
@@ -163,15 +163,15 @@ body{
         </svg>
       </button>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-        <li><a class="dropdown-item" href="http://127.0.0.1:3000/main" class="nav-link px-2 link-light">Home</a></li>
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/main" class="nav-link px-2 link-light"" id="menu_li">Home</a></li>
         <li><a class="dropdown-item" href="http://127.0.0.1:3000/information_vegan.html"
-            class="nav-link px-2 link-light">About</a></li>
+            class="nav-link px-2 link-light"" id="menu_li">About</a></li>
         <li><a class="dropdown-item" href="http://127.0.0.1:3000/information_news.html"
-            class="nav-link px-2 link-light">Contents</a></li>
-        <li><a class="dropdown-item" href="http://127.0.0.1:3000/show_item" class="nav-link px-2 link-light">Shop</a>
+            class="nav-link px-2 link-light"" id="menu_li">Contents</a></li>
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/show_item" class="nav-link px-2 link-light"" id="menu_li">Shop</a>
         </li>
         <li><a class="dropdown-item" href="http://127.0.0.1:3000/recommend_start.html"
-            class="nav-link px-2 link-light">Recommend</a></li>
+            class="nav-link px-2 link-light"" id="menu_li">Recommend</a></li>
       </ul>
 
             <button class="btn btn-outline-light dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
