아이디 비밀번호 조회 기능 추가

--- a/public/login.html
+++ b/public/login.html
@@ -108,6 +108,10 @@
             <br>
             <button class="w-100 btn btn-lg btn-success" type="submit">로그인</button>
           </div>
+          <br>
+          <a href="./find_id.html"><label >아이디 찾기</label></a>
+          <a href="./find_pw.html"><label >비밀번호 찾기</label></a>
+
         </form>
       </div>
       <img src="./img/whiteBG3.png" alt="" class="img-fluid">
