--- a/public/find_id.html
+++ b/public/find_id.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
+          rel="stylesheet" 
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
+          crossorigin="anonymous">
     <style>
-        /* .form-signin{
+        .form-signin{
             margin: auto;
-        } */
+        }
         body{
-        /* align-items: center; */
+        align-items: center;
         background-color: rgb(238, 238, 238);
         }
 
@@ -53,11 +56,11 @@
     </a>
     <!-- nbsp텍스트 영역으로 들여옴, col-md 바꿈 -->
     <ul class="nav col-12 col-md-5 mb-2 justify-content-center mb-md-0">
-      <li><a href="#" class="nav-link px-2 link-light">Home</a></li>
+      <li><a href="http://127.0.0.1:3000/main" class="nav-link px-2 link-light">Home</a></li>
       <li><a href="#" class="nav-link px-2 link-light">About</a></li>
       <li><a href="#" class="nav-link px-2 link-light">Contents</a></li>
       <li><a href="#" class="nav-link px-2 link-light">Shop</a></li>
-      <li><a href="#" class="nav-link px-2 link-light">Recommend</a></li>
+      <li><a href="http://127.0.0.1:5501/public/recommend_start.html" class="nav-link px-2 link-light">Recommend</a></li>
     </ul>
 
     <div class="col-md-3 col-sm-2 text-end">
@@ -89,28 +92,25 @@
         <img src="./img/logo01.png" alt="" class="img-fluid">
       </div>
       <div class="row text-center">
-        <h1 class="mt-3 mb-5">로그인 해주세요</h1>
+        <h1 class="mt-3 mb-5">아이디 찾기</h1>
     </div>
       <div class="container col-lg-6 col-md-10 ">
-        <form action="http://127.0.0.1:3000/login" method="post">
+        <form action="http://127.0.0.1:3000/find_id" method="post">
           <div class="form-floating">
-            <input type="text" class="form-control" id="floatingInput" name="id" placeholder="name@example.com">
-            <label for="floatingInput">아이디</label>
+            <input type="text" class="form-control" id="floatingInput" name="name" placeholder="name@example.com">
+            <label for="floatingInput">이름</label>
           </div>
           <div class="form-floating">
-            <input type="password" class="form-control" id="floatingPassword" name="pw" placeholder="Password">
-            <label for="floatingPassword">비밀번호</label>
+            <input type="password" class="form-control" id="floatingPassword" name="email" placeholder="Password">
+            <label for="floatingPassword">이메일</label>
           </div>
-          <div style="text-align: left;" class="mt-2">
-              <h6 style="color:red">아이디나 비밀번호를 확인해주세요.</h6>
-          </div>
-          <br>
           <div>
-            <button class="w-100 btn btn-lg btn-success" type="submit">로그인</button>
+            <br>
+            <button class="w-100 btn btn-lg btn-success" type="submit">아이디 찾기</button>
           </div>
           <br>
-          <a href="./find_id.html"><label >아이디 찾기</label></a>
-          <a href="./find_pw.html"><label >비밀번호 찾기</label></a>
+          <a href="./find_pw.html"><label>비밀번호 찾기</label></a>
+
         </form>
       </div>
       <img src="./img/whiteBG3.png" alt="" class="img-fluid">
@@ -121,7 +121,7 @@
     </main>
 
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
-      <p class="col-xl-6 col-lg-12 mb-0 text-muted"> <img src="./img/코딩네이터로고.PNG" alt="" height="45" class="mx-3">© 2022 SmartCampus AIClass Codingnator, Inc</p>
+      <p class="col-xl-6 col-lg-12 mb-0 text-muted"> <img src="./img/코딩네이터로고.PNG" alt="" height="45" class="mx-3">© 2022 SmartCampus AIClass Codingnator, Inc</p>
      
       <ul class="nav col-xl-6 col-lg-12 col-md-12 justify-content-end">
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted" id="help10">인공_다람쥐 &nbsp; |</a></li>
@@ -133,19 +133,17 @@
     </footer>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-      <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
               integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
               crossorigin="anonymous">
-      </script> -->
-      <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" 
+      </script>
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" 
               integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" 
               crossorigin="anonymous">
-      </script> -->
-      <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" 
+      </script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" 
               integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" 
               crossorigin="anonymous">
-      </script> -->
+      </script>
 </body>
 </html>
