햄버거 찐 최종

--- a/public/find_id.html
+++ b/public/find_id.html
@@ -44,7 +44,9 @@
         main {
           background-color: white;
         }
-
+        a>label{
+          cursor: pointer;
+        }
     </style>
 </head>
 <body class="text-center">
