--- a/public/information_vegan.html
+++ b/public/information_vegan.html
@@ -67,8 +67,12 @@
 
     div.product-name.my-2 {
       color: black;
-
-
+    }
+    #dropdownMenuButton1_h:hover path{
+        fill: #000 !important;
+    }
+    #dropdownMenuButton1_h{
+      display: none;
     }
 
     .bar-txtBox:before {
@@ -161,6 +165,7 @@
 
     <div class="col-md-3 col-sm-2 text-end">
       <div class="dropdown">
+        
         <button class="btn btn-outline-light dropdown-toggle" type="button" id="dropdownMenuButton1_h"
           data-bs-toggle="dropdown" aria-expanded="false">
 
