--- a/public/find_pw.html
+++ b/public/find_pw.html
@@ -44,7 +44,9 @@
         main {
           background-color: white;
         }
-
+        a>label{
+          cursor: pointer;
+        }
     </style>
 </head>
 <body class="text-center">
