--- a/public/information_post.html
+++ b/public/information_post.html
@@ -184,7 +184,7 @@ main{
       <section class="py-5 text-center container">
         <div class="row py-lg-5">
           <div class="col-lg-6 col-md-8 mx-auto my-4">
-            <h1 class="fw-light">Vegan Post</h1><br>
+            <h1 class="fw-light"><strong>Vegan Post</strong></h1><br>
             <p class="lead text-muted"><strong>국내 유일 비건 코스메틱 드럭스 스토어 </strong><span style="color: rgb(7, 105, 50);"><strong>'BeauGan'</strong></span><strong>은 우리 주위의 이웃들과 함께 환경과 건강에 대해 소통할 수 있는 포스트를 제공합니다.</strong></p>
             <p>
               <!-- <a href="https://m.post.naver.com/search/post.naver?keyword=%EB%B9%84%EA%B1%B4" class="btn btn-success my-2">비건포스트 바로가기</a> -->
